# milkv-face-rec

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json  riscv-toolchain.cmake
database/: face_database.txt
src/: arcface.cpp  arcface.h  base.cpp  base.h  config.cpp  config.h  face_database.cpp  face_database.h  face_rec_simple.cpp  main.cpp  mtcnn.cpp  mtcnn.h
tool/: build.sh  build_dlib.sh
tools/: build_ncnn.sh  build_ncnn_risc.sh  build_opencv.sh  build_opencv_risc.sh
